# samgen

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
configs/: ch3_density.yaml  ch3_grid.yaml  ch3_onesided.yaml
configs/inputs/: ch3.gro  ch3.itp  coh.gro  coh.itp
samgen/: __init__.py  _build.py  cli.py  geometry.py  gmx.py  interactive.py  topology.py
samgen/core/: __init__.py  anchor.py  gro.py  lattice.py  molecule.py  orient.py  periodicity.py  topfile.py
samgen/design/: __init__.py  density.py  fraction.py  grid.py  multilig.py  uniform.py
tests/: _synthetic.py  test_core.py  test_density.py  test_designs.py  test_interactive.py  test_orient.py  test_periodicity.py  test_placement.py  test_smoke.py  test_synthetic.py  test_topology.py  test_twosided.py
